# signal-digest

./: .gitignore  README.md  README.zh-CN.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: __init__.py  app_reviews.py  competitors.py  deps.py  digest_reports.py  monitored_apps.py  settings.py
backend/app/core/: logging.py
backend/app/models/: __init__.py  app_review.py  base.py  competitor_app.py  digest_report.py  enums.py  monitored_app.py  review_insight.py
backend/app/prompts/: app_review_digest.py
backend/app/scheduler/: jobs.py
backend/app/schemas/: apps.py  reviews.py  settings.py
backend/app/services/: app_lookup.py  change_detector.py  digest_delivery.py  digest_generator.py  email_sender.py  external_http.py  notion_exporter.py  review_classifier.py  review_normalizer.py  settings_store.py  url_parser.py
backend/app/services/ingestion/: __init__.py  apify_adapter.py  app_store_connect.py  app_store_rss.py  base.py  errors.py  google_play.py  registry.py  runner.py
backend/scripts/: regenerate_digest.py  run_e2e_demo.py  test_llm.py
backend/tests/: test_app_lookup.py  test_app_reviews.py  test_app_store_rss.py  test_classifier.py  test_delivery.py  test_digest_review.py  test_external_http.py  test_monitored_apps.py  test_notion_exporter.py  test_proxy_connectivity.py  test_review_enrich.py  test_review_normalizer.py  test_settings.py  test_smoke.py
doc/: signaldigest-open-source-design-20260612.md
frontend/: README.md  next.config.ts  package-lock.json
(+28 files in other folders)
