[project]
name = "signaldigest"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "litellm>=1.88.1",
    "pydantic-settings>=2.14.1",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]
